--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="col-xs-2 col-md-4">
         <div class="jumbotron">
-          <div id="computer-number" placeholder="Predetermined number"></div>
+          <div id="computerNumberDiv" placeholder="Predetermined number"></div>
         </div>
       </div>
       <div class="col-xs-1 col-md-2">
@@ -56,27 +56,29 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-6 col-md-6">
-          <div id="images">
-            <div class="btn-group" role="group" aria-label="jewels">
-              <button type="button" class="btn btn-default"><img src="./assets/images/red.png" alt="red-jewel"></button>
-              <button type="button" class="btn btn-default"><img src="./assets/images/blue.png" alt="blue-jewel"></button>
-              <button type="button" class="btn btn-default"><img src="./assets/images/yellow.png" alt="yellow-jewel"></button>
-              <button type="button" class="btn btn-default"><img src="./assets/images/green.png" alt="green-jewel"></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-2 col-md-4">
-          <div class="jumbotron">
-            <div id="score">Your total score is:</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-6">
+        <div id="images">
+          <div class="btn-group" role="group" aria-label="jewels">
+            <button type="button" class="btn btn-default"><img src="./assets/images/red.png" alt="red-jewel"></button>
+            <button type="button" class="btn btn-default"><img src="./assets/images/blue.png" alt="blue-jewel"></button>
+            <button type="button" class="btn btn-default"><img src="./assets/images/yellow.png" alt="yellow-jewel"></button>
+            <button type="button" class="btn btn-default"><img src="./assets/images/green.png" alt="green-jewel"></button>
           </div>
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="./assets/javascript/game.js"></script>
+    <div class="row">
+      <div class="col-xs-2 col-md-4">
+        <div class="jumbotron">
+          <div id="score">Your total score is:</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
