added comments and added redJewel number to display on dom

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div class="col-xs-6 col-md-6">
         <div id="images">
           <div class="btn-group" role="group" aria-label="jewels">
-            <button type="button" class="btn btn-default"><img src="./assets/images/red.png" alt="red-jewel"></button>
-            <button type="button" class="btn btn-default"><img src="./assets/images/blue.png" alt="blue-jewel"></button>
-            <button type="button" class="btn btn-default"><img src="./assets/images/yellow.png" alt="yellow-jewel"></button>
-            <button type="button" class="btn btn-default"><img src="./assets/images/green.png" alt="green-jewel"></button>
+            <button type="button" class="btn btn-default redJewel"><img src="./assets/images/red.png" alt="red-jewel"></button>
+            <button type="button" class="btn btn-default blueJewel"><img src="./assets/images/blue.png" alt="blue-jewel"></button>
+            <button type="button" class="btn btn-default yellowJewel"><img src="./assets/images/yellow.png" alt="yellow-jewel"></button>
+            <button type="button" class="btn btn-default greenJewel"><img src="./assets/images/green.png" alt="green-jewel"></button>
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-xs-2 col-md-4">
         <div class="jumbotron">
-          <div id="score">Your total score is:</div>
+          <div id="userScore">Your total score is:</div>
         </div>
       </div>
     </div>
