--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-xs-2 col-md-4">
         <div class="jumbotron">
-          <div id="userScore">Your total score is:</div>
+          <div id="userScoreDiv">Your total score is:</div>
         </div>
       </div>
     </div>
