--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <title>Crystal Collector</title>
 </head>
 
@@ -49,10 +49,10 @@
       <div class="col-xs-1 col-md-2">
         <div class="jumbotron">
           <div class="stats">
-            <div id="Wins">Wins:</div>
+            <div id="wins">Wins:</div>
             <br>
             <br>
-            <div id="Losses">Losses:</div>
+            <div id="losses">Losses:</div>
           </div>
         </div>
       </div>
