--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="col-xs-2 col-md-4">
         <div class="jumbotron">
-          <div id="computerNumberDiv" placeholder="Predetermined number"></div>
+          <div id="computerNumberDiv">Computer Number:</div>
         </div>
       </div>
       <div class="col-xs-1 col-md-2">
